--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   "devDependencies": {
     "eslint": "^7.17.0",
     "prettier": "^2.2.1"
+  },
+  "dependencies": {
+    "playwright": "^1.7.1"
   }
 }
